--- a/app/src/main/res/layout/fragment_change_bio.xml
+++ b/app/src/main/res/layout/fragment_change_bio.xml
@@ -11,7 +11,7 @@
         style="@style/edit_reg_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="О себе"
+        android:hint="@string/hint_change_bio"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
